# FreedomKV31F

./: hardware_init.c  main.c  main.h
armgcc/: CMakeLists.txt
atl/: .cproject  .project  FreedomKV31F_MKV31F512VLL12 debug jlink.launch  FreedomKV31F_MKV31F512VLL12 debug pne.launch  FreedomKV31F_MKV31F512VLL12 release jlink.launch  FreedomKV31F_MKV31F512VLL12 release pne.launch
iar/: FreedomKV31F.ewd  FreedomKV31F.ewp  FreedomKV31F.eww
kds/: .cproject  .project  FreedomKV31F.wsd  FreedomKV31F_MKV31F512VLL12 debug cmsisdap.launch  FreedomKV31F_MKV31F512VLL12 debug jlink.launch  FreedomKV31F_MKV31F512VLL12 debug pne.launch  FreedomKV31F_MKV31F512VLL12 release cmsisdap.launch  FreedomKV31F_MKV31F512VLL12 release jlink.launch  FreedomKV31F_MKV31F512VLL12 release pne.launch
mdk/: FreedomKV31F.uvmpw  FreedomKV31F.uvprojx
